Fixed scrollbar appearing when not needed

--- a/client/css/stylus/endround.styl
+++ b/client/css/stylus/endround.styl
@@ -14,11 +14,12 @@ div#endround
     color: #FFFFFF
     text-shadow: rgba(0, 0, 0, .75) 0px 1px 0px
     margin-bottom: 5px
-  p
+  > p
     color: #D9DFEC
     margin-bottom: 5px
   p#end-of-round-baby
     margin-bottom: 10px
+
 
   div#round-goal
     background: #0082DD
@@ -101,6 +102,10 @@ ul.solution
     background: #4FBA07
   li.dice[data-alloc='forbidden']
     background: red
+
+p.no-solution
+  font-size: 13px
+  text-align: center
 
 ul.score-tally 
   li
