--- a/client/css/stylus/main.styl
+++ b/client/css/stylus/main.styl
@@ -25,12 +25,14 @@ body
   background: linear-gradient(top, #2681CC 0%, #206FB0 100%)
   min-height: 100%
 
+div#container-displacer
+  padding-top:15px
+
 div#container,
 div#container[data-glow='off']
   margin: 0 auto
   width: 80%
   padding: 15px
-  margin-top: 20px
   background: rgba(255, 255, 255, 0.2)
   border: 1px solid rgba(255, 255, 255, 0.3)
   border-radius(5px)
